--- a/style.css
+++ b/style.css
@@ -43,6 +43,14 @@ body {
     transform: translate(100%,0) ;
 }
 
+.movepanel-close-left {
+    transform: translate(200,0);
+}
+
+.movepanel-close-right {
+    transform: translate(-200,0);
+}
+
 .centerdiv {
     position: absolute;
     height: 100%;
@@ -84,6 +92,7 @@ body {
     display: none;
 }
 
+
 .twitch, .youtube {
     position: absolute;
     right: 0;
@@ -92,19 +101,28 @@ body {
     height: 100%;
     z-index: -1;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     font-family: 'Square';
-    font-size: 1em;
+    font-size: 1.3em;
     color: #efefef;
-    text-shadow: 3px 3px 3px black ;
+    text-align: center;
+    text-shadow: 5px 5px 4px black ;
 }
 
-div iframe {
-    position: absolute;
-    height: 40%;
-    width: 40%;
-    margin-top: 10%;
-    margin-left: 30%;
+.twitch h1, .youtube h1{
+    font-size: 3em ;
+}
+.Screen{
+    height: auto;
+    width: 50%;
+    filter: drop-shadow(15px 15px 7px black);
+}
+
+.Arrow {
+    height: auto;
+    width: 5%;
 }
 
 /* FOND */
@@ -114,5 +132,5 @@ div iframe {
     bottom: 0;
     width: 100%;
     height: 100%;
-    z-index: -2;
+    z-index: -3;
 }
