--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 .panel {
     height: 100%;
     width: 50%;
+    z-index: 2;
     transform: translate(0,0);
     transition: transform 1s;
 }
@@ -44,11 +45,11 @@ body {
 }
 
 .movepanel-close-left {
-    transform: translate(200,0);
+    transform: translate(100,0);
 }
 
 .movepanel-close-right {
-    transform: translate(-200,0);
+    transform: translate(0,0);
 }
 
 .centerdiv {
@@ -73,7 +74,15 @@ body {
     flex: 1;
 }
 
-.logo {
+.logoTwitch {
+    position: absolute;
+    height: auto;
+    width: 25%;
+    filter: drop-shadow(15px 15px 7px black);
+    flex: 1;    
+}
+
+.logoYtb {
     position: absolute;
     height: auto;
     width: 25%;
@@ -88,19 +97,14 @@ body {
 
 /* TWITCH & YOUTUBE */
 
-.hidden {
-    display: none;
-}
-
-
-.twitch, .youtube {
+.info {
+    display: flex;
     position: absolute;
     right: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
-    display: flex;
+    z-index: 1;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -109,6 +113,15 @@ body {
     color: #efefef;
     text-align: center;
     text-shadow: 5px 5px 4px black ;
+}
+
+
+.twitch {
+    display: none;
+}
+
+.youtube {
+    display: none;
 }
 
 .twitch h1, .youtube h1{
