--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .movepanel-close-left {
-    transform: translate(100,0);
+    transform: translate(0,0);
 }
 
 .movepanel-close-right {
@@ -74,15 +74,7 @@ body {
     flex: 1;
 }
 
-.logoTwitch {
-    position: absolute;
-    height: auto;
-    width: 25%;
-    filter: drop-shadow(15px 15px 7px black);
-    flex: 1;    
-}
-
-.logoYtb {
+.logo {
     position: absolute;
     height: auto;
     width: 25%;
@@ -98,13 +90,13 @@ body {
 /* TWITCH & YOUTUBE */
 
 .info {
-    display: flex;
     position: absolute;
     right: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -115,13 +107,20 @@ body {
     text-shadow: 5px 5px 4px black ;
 }
 
-
-.twitch {
+#twitch {
     display: none;
 }
 
-.youtube {
+.twitchshow {
+    display: block;
+}
+
+#youtube {
     display: none;
+}
+
+.youtubeshow {
+    display: block;
 }
 
 .twitch h1, .youtube h1{
@@ -136,6 +135,15 @@ body {
 .Arrow {
     height: auto;
     width: 5%;
+    filter: drop-shadow(15px 15px 7px black);
+}
+
+.linktree {
+    height: auto;
+    width: 10%;
+    margin-left: 120%;
+    margin-bottom: 10%;
+    filter: drop-shadow(15px 15px 7px black);
 }
 
 /* FOND */
